XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>

* New feature: allow selecting multiple files in the 'Open file' dialog


2013 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.2.2
* Bug fix: wrong brutal stop of a debug session on Fedora
* Bug fix: side bars must not be expanded via clicking on disabled tabs
* Improvement: get rid of serialization/deserialization of the python files
  parser info cache
* New feature: user selectable sorting order for the tabs in the navigation menu
* New feature: editor 'highlight in outline browser' context menu item
* Bug fix: exception in some cases when 'highlight in FS browser' is selected
* New feature: user selectable behavior - to preserve or not the tab order upon
  selection a tab in the tab list button menu
* Bug fix: on some systems find/replace comboboxes expanded too much in case of
  long patterns
* Bug fix: SVN plugin log window - incorrect revision number based sorting
* New feature: debug session button added to dump debug session settings
* Replacing redo shortcut Ctrl+Shift+Z with Ctrl+Y
* Bug fix: allow replacing with an empty string

2013 Dec 14 Sergey Satskiy <sergey.satskiy@gmail.com>

* Version 2.2.1
* Improvement: debugger variable view displays the number of lines and the number
  of characters for python strings and QStrings. Unnecessary '.' in the QString
  variable name is stripped.
* Bug fix: proper signalling VCS status change in the project browser
* Rectangular selection: Ctrl+mouse or Alt+Shift+cursor keys
* Better help widget
* Better welcome widget
* pylint 1.0.0 is now working
* Fix: Ctrl++, Ctrl+- on numpad did not change the font size on all tabs.
* Fix for FC19: diff viewer font was not monospaced
* Improvement: diff viewer font is scaled in sync with the main editor
* Bug fix: VCS annotate in debug mode caused crash
* Bug fix: newly opened files withing a debug session are editable
* Removing zoom buttons from the text editor toolbar