@@ -1,6 +1,7 @@
 XXXX XXX XX Sergey Satskiy <sergey.satskiy@gmail.com>
 
 * New feature: allow selecting multiple files in the 'Open file' dialog
+* New feature: display the number of highlighted occurences on the status bar
 
 
 2013 Dec 26 Sergey Satskiy <sergey.satskiy@gmail.com>
